# SandTable

./: .gitignore  .gitmodules  PWM.py  PlayQueue.py  ShoppingList.xlsx  V2_Ideas.md  divideCoords.py  playTrack.py  readme.md  sqltestadd.py  thr2png.py  thr2png2.py  writeSerial.py
Prints/Final/: Arm1Top.stl  Arm2.stl  Arm2Gear.stl  BodyBottom.stl  BodyTop.stl  GearArm.stl  Sensor1Body.stl  Sensor2Body.stl
Prints/Final/Optional/: Arm2.stl  Arm2Gear2v2.stl  BodyTopLogo.stl  MagnetHolder.stl  MagnetHolderShort.stl
Prints/RGB/: Top.stl  bottom.stl
arduino/: CMakeLists.txt  main_old.cpp  pinout.txt  platformio.ini  sendSerial.py
arduino/lib/angles/src/: angles.cpp  angles.h  angles.hpp
arduino/lib/driver/src/: driver.cpp  driver.h  driver.hpp
arduino/lib/leds/src/: leds.cpp  leds.h  leds.hpp
arduino/src/: main.cpp
project/: settings.py  urls.py
sandtable/: __init__.py  apps.py  forms.py  models.py  urls.py  views.py
sandtable/migrations/: 0001_initial.py  0002_rgbw.py  0003_settings_rgbw_led_speed.py  0004_rgbw_led_intensity_rgbw_led_saturation_and_more.py  0005_settings_r_settings_theta.py  0006_settings_calibrate.py
sandtable/static/css/: style.css
sandtable/static/js/: chart.js  color.js  fetch.js
sandtable/templates/sandtable/: base.html  calibrate.html  colorPicker.html  index.html  queue.html  settings.html  track.html  tracks.html  uploadTracks.html
